Remove video support

--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
   "peerDependencies": {
     "prop-types": "*",
     "react": "*",
-    "react-native": "*",
-    "react-native-video": "*"
+    "react-native": "*"
   }
 }
